
Thu Apr 27 04:00:28 GMT 2000
(gilbertt)

All done except the tiff loader. This one is gonna be hard. Libtiff is quite
broken in many ways ;-)

_______________________________________________

Thu Apr 27 04:22:06 GMT 2000
(gilbertt)

Return 2 from interrupted loaders.

_______________________________________________

Thu Apr 27 13:41:11 GMT 2000
(gilbertt)

Free up some RAM and close the filehandle when interrupted.

_______________________________________________

Thu Apr 27 13:43:49 GMT 2000
(gilbertt)

Actually, made the gif loader give back what it's got without changing im->h
to reflect, or reallocing the image data. The reason for this is that it
already told apps what the image size was in the first progressive loader
callback, and changing it afterwards can cause confusion. Also, an app can
still handle/display a half-loaded image, as the rest is just filled black,
and the programmer knows how much of the image he got, 'cos he interrupted
it from the callback. If the programmer wants to trim the image, he knows
where to trim it, but if he/she wants to display a part-loaded image,
that'll work sanely.

I think this is more sane behaviour, having tested it in feh and
imlib2_view, but feel free to disagree ;-)

_______________________________________________

Wed Jul 12 22:20:53 PDT 2000
(KainX)

It's generally a good idea to increment the reference count when you
implement reference counting.  This should fix the mysterious problems
people have been having with Imlib2 stealing pixmaps out from under
Eterm.

_______________________________________________

Fri Aug 10 13:33:13 PDT 2001
(KainX)

None of the libraries are now absolute requirements.  Everything that
requires external support which Imlib2 itself doesn't specifically
need can now be optionally built.

_______________________________________________

Tue Jan 15 15:22:06 EST 2002
(KainX)

Fixed a whole slew of potential buffer overflows, hopefully including
the one recently posted to BUGTRAQ.
