@@ -36,10 +36,6 @@ for EACHDIR in $SUBDIRS ; do
     autoheader || abort "autoheader"
     automake --foreign --add-missing || abort "automake"
     autoconf || abort "autoconf"
-    (cd libltdl && aclocal) || abort "in libltdl, aclocal"
-    (cd libltdl && autoheader) || abort "in libltdl, autoheader"
-    (cd libltdl && automake --add-missing) || abort "in libltdl, automake"
-    (cd libltdl && autoconf) || abort "in libltdl, autoconf"
 done
 
 if test -z "$*"; then
