@@ -14,5 +14,5 @@ INCLUDES             = -I/usr/X11R6/include -I$(top_srcdir)/libltdl \
 bin_PROGRAMS         = imlib2_view imconvert
 imconvert_SOURCES    = imconvert.c
 imlib2_view_SOURCES  = view.c 
-LDADD    = @DLLDFLAGS@ $(top_builddir)/libltdl/libltdlc.la \
-                       $(x_libs) -lttf -lImlib2
+LIBADD    = @DLLDFLAGS@ $(top_builddir)/libltdl/libltdlc.la \
+                       $(x_libs) -lttf $(top_builddir)/src/libImlib2.la
