@@ -34,41 +34,41 @@ $(GIF_L) \
 pnm.la argb.la bmp.la xpm.la tga.la gzbz2.la
 
 jpeg_la_SOURCES	     = loader_jpeg.c
-jpeg_la_LDFLAGS	     = -no-undefined -module -avoid-version
-jpeg_la_LIBADD	     = @JPEGLIBS@ -L$(top_builddir)/src
+jpeg_la_LDFLAGS	     = -no-undefined -module -avoid-version -L$(top_builddir)/src
+jpeg_la_LIBADD	     = @JPEGLIBS@
 
 png_la_SOURCES	     = loader_png.c
-png_la_LDFLAGS	     = -no-undefined -module -avoid-version
-png_la_LIBADD	     = @PNGLIBS@ -L$(top_builddir)/src
+png_la_LDFLAGS	     = -no-undefined -module -avoid-version -L$(top_builddir)/src
+png_la_LIBADD	     = @PNGLIBS@
 
 tiff_la_SOURCES	     = loader_tiff.c
-tiff_la_LDFLAGS	     = -no-undefined -module -avoid-version
-tiff_la_LIBADD	     = @TIFFLIBS@ -L$(top_builddir)/src
+tiff_la_LDFLAGS	     = -no-undefined -module -avoid-version -L$(top_builddir)/src
+tiff_la_LIBADD	     = @TIFFLIBS@
 
 gif_la_SOURCES	     = loader_gif.c
-gif_la_LDFLAGS	     = -no-undefined -module -avoid-version
-gif_la_LIBADD	     = @GIFLIBS@ -L$(top_builddir)/src
+gif_la_LDFLAGS	     = -no-undefined -module -avoid-version -L$(top_builddir)/src
+gif_la_LIBADD	     = @GIFLIBS@
 
 pnm_la_SOURCES	     = loader_pnm.c
-pnm_la_LDFLAGS	     = -no-undefined -module -avoid-version
-pnm_la_LIBADD	     = -L$(top_builddir)/src
+pnm_la_LDFLAGS	     = -no-undefined -module -avoid-version -L$(top_builddir)/src
+pnm_la_LIBADD	     =
 
 argb_la_SOURCES	     = loader_argb.c
-argb_la_LDFLAGS	     = -no-undefined -module -avoid-version
-argb_la_LIBADD	     = -L$(top_builddir)/src
+argb_la_LDFLAGS	     = -no-undefined -module -avoid-version -L$(top_builddir)/src
+argb_la_LIBADD	     =
 
 bmp_la_SOURCES	     = loader_bmp.c
-bmp_la_LDFLAGS	     = -no-undefined -module -avoid-version
-bmp_la_LIBADD	     = -L$(top_builddir)/src
+bmp_la_LDFLAGS	     = -no-undefined -module -avoid-version -L$(top_builddir)/src
+bmp_la_LIBADD	     =
 
 xpm_la_SOURCES	     = loader_xpm.c
-xpm_la_LDFLAGS	     = -no-undefined -module -avoid-version
-xpm_la_LIBADD	     = -L$(top_builddir)/src
+xpm_la_LDFLAGS	     = -no-undefined -module -avoid-version -L$(top_builddir)/src
+xpm_la_LIBADD	     =
 
 tga_la_SOURCES       = loader_tga.c
-tga_la_LDFLAGS	     = -no-undefined -module -avoid-version
-tga_la_LIBADD	     = -L$(top_builddir)/src
+tga_la_LDFLAGS	     = -no-undefined -module -avoid-version -L$(top_builddir)/src
+tga_la_LIBADD	     =
 
-gzbz2_la_SOURCES       = loader_gzbz2.c
-gzbz2_la_LDFLAGS	     = -no-undefined -module -avoid-version
-gzbz2_la_LIBADD	     = -L$(top_builddir)/src
+gzbz2_la_SOURCES     = loader_gzbz2.c
+gzbz2_la_LDFLAGS     = -no-undefined -module -avoid-version -L$(top_builddir)/src
+gzbz2_la_LIBADD	     =
